--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 log = "0.4.20"
 env_logger = "0.11.2"
+reqwest = { version = "0.11.24",features = ["blocking"]  }
+error-chain = "0.12.4"
+
