--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ env_logger = "0.11.2"
 reqwest = { version = "0.11.24",features = ["blocking"]  }
 error-chain = "0.12.4"
 serde_json = "1.0.114"
+serde = { version = "1.0.197", features = ["derive"] }
 
