--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ reqwest = { version = "0.11.24",features = ["blocking"]  }
 error-chain = "0.12.4"
 serde_json = "1.0.114"
 serde = { version = "1.0.197", features = ["derive"] }
+anyhow = "1.0.80"
 
