--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ error-chain = "0.12.4"
 serde_json = "1.0.114"
 serde = { version = "1.0.197", features = ["derive"] }
 anyhow = "1.0.80"
+rust_decimal = "1.34.3"
+rust_decimal_macros = "1.34.2"
 
